json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@crash__crash000006.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/crash/crash000006.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            True,
            False,
            Null,
            LBrace,
            LBracket,
        ],
        actual: Illegal,
        origin: "\\uda00\\ue800\\uggggxy",
        row: 1,
        column: 33,
    },
)
